--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 body{
-    background: url("../images/bg.jpeg") no-repeat center 0/100% #000;
+    /* background: url("../images/bg.jpeg") no-repeat center 0/105% #000; */
+    background-color: rgb(207, 207, 207);
     padding: 30px 0;
     min-width: 1200px;
     font-family: 'IBM Plex Sans', sans-serif;
@@ -16,7 +17,6 @@ body{
 .container .nav{
     position: relative;
     width: 100%;
-    font-weight: 300;
     height: 100px;
     background-color:rgba(0, 0, 0, .7);
 }
@@ -28,7 +28,16 @@ body{
     margin: 0 auto;
     width: 100px;
     height: 100px;
+    opacity: 70%;
+}
 
+.container .nav .logo:hover{
+    opacity: 100%;
+    transition: ease-in-out .2s;
+}
+
+.container .nav .logo h1{
+    display: none;
 }
 
 .container .nav .logo img{
@@ -49,15 +58,16 @@ body{
     line-height: 100px;
     margin: 0 20px;
     padding: 20px;
-    color: white;
+    color: rgba(255, 255, 255, 0.746);
     box-sizing: border-box;
     font-size: 20px;
-    font-weight: 400;
+    font-weight: 200;
 }
 
 .container .nav .left-nav a:hover,
 .container .nav .right-nav a:hover{
-    background-color:rgba(0, 0, 0, 1);
+    color: white;
+    transition:ease-in-out .5s ;
 }
 
 .container .slogan{
@@ -68,7 +78,6 @@ body{
     /* background-color: rgba(255, 255, 255, .3); */
     padding:80px 0;
     box-sizing: border-box;
-    font-family: 'Quarto';
     font-size: 100px;
     font-weight: 900;
     color: white;
@@ -82,11 +91,7 @@ body{
 
 .container .activity .item li{
     float: left;
-    width: 250px;
     box-sizing: border-box;
-
-    height: 250px;
-    background-color: rgba(255, 255, 255, .7);
     margin-right: 26px;
 }
 
@@ -94,9 +99,18 @@ body{
     margin-right: 0;
 } */
 
+
 .work{
     position: relative;
+    background-color: rgba(255, 255, 255, .7);
+    width: 250px;
     height: 250px;
+    transition: all .5s ease-in;
+}
+
+.work:hover{
+    bottom: 6px;
+    box-shadow:0 7px 10px rgba(0, 0, 0, .15);
 }
 
 .work .title{
@@ -104,13 +118,13 @@ body{
     width: 100%;
     height: 70px;
     line-height: 70px;
-    background-color: rgb(46, 46, 46);
+    background-color: rgb(255, 255, 255);
     position: absolute;
     bottom:0px;
     box-sizing: border-box;
     text-align: center;
-    font-weight: 900;
+    font-weight: 400;
     font-size: 1.5em;
-    color: white;
+    color: rgb(173, 173, 173);
 
 }
