--- a/css/common.css
+++ b/css/common.css
@@ -3,3 +3,77 @@
     display: block;
     clear: both;
 }
+
+body{
+    background-color: #111111;
+    padding: 30px 0;
+    min-width: 1200px;
+    font-family: 'IBM Plex Sans', sans-serif;
+}
+
+.container{
+    margin-top: 20px;
+    width:80%;
+    margin:0 auto;
+    /* background-color: rgba(255, 255, 255, .3); */
+    /* height: 750px; */
+}
+
+.container .nav{
+    position: relative;
+    width: 100%;
+    height: 100px;
+    /* background-color:rgba(0, 0, 0, .7); */
+    /* border-bottom: 1px solid rgb(164, 164, 164); */
+}
+
+
+
+.container .nav .logo{
+    position: absolute;
+    left: -34px;
+    right: 0;
+    margin: 15px 35px;
+    width: 100px;
+    height: 100px;
+    opacity: 70%;
+}
+
+.container .nav .logo:hover{
+    opacity: 100%;
+    transition: ease-in-out .2s;
+}
+
+.container .nav .logo h1{
+    display: none;
+}
+
+.container .nav .logo img{
+    height: 70px;
+    margin: 15px 25px;
+}
+
+.container .nav .navitem{
+    float: right;
+}
+
+.container .nav .navitem a{
+    line-height: 100px;
+    margin: 0 25px;
+    padding: 15px 0;
+    color: rgba(255, 255, 255, 0.746);
+    box-sizing: border-box;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.container .nav .navitem :last-child{
+    padding-right: 0;
+}
+
+.container .nav .navitem a:hover{
+    color: white;
+    text-shadow: 2px 2px 0px #1ccece;
+    transition:ease-in-out .2s ;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.459);
+}
