--- a/css/index.css
+++ b/css/index.css
@@ -1,77 +1,5 @@
-body{
-    /* background: url("../images/bg.jpeg") no-repeat center 0/105% #000; */
-    background-color: rgb(0, 0, 0);
-    padding: 30px 0;
-    min-width: 1200px;
-    font-family: 'IBM Plex Sans', sans-serif;
-}
-
-.container{
-    margin-top: 20px;
-    width:80%;
-    margin:0 auto;
-    /* background-color: rgba(255, 255, 255, .3); */
-    /* height: 750px; */
-}
-
-.container .nav{
-    position: relative;
-    width: 100%;
-    height: 100px;
-    /* background-color:rgba(0, 0, 0, .7); */
-    /* border-bottom: 1px solid rgb(164, 164, 164); */
-}
 
 
-
-.container .nav .logo{
-    position: absolute;
-    left: -34px;
-    right: 0;
-    margin: 0 0;
-    width: 100px;
-    height: 100px;
-    opacity: 70%;
-}
-
-.container .nav .logo:hover{
-    opacity: 100%;
-    transition: ease-in-out .2s;
-}
-
-.container .nav .logo h1{
-    display: none;
-}
-
-.container .nav .logo img{
-    width: 100px;
-    height: 100px;
-}
-
-.container .nav .navitem{
-    float: right;
-}
-
-.container .nav .navitem a{
-    line-height: 100px;
-    margin: 0 25px;
-    padding: 15px 0;
-    color: rgba(255, 255, 255, 0.746);
-    box-sizing: border-box;
-    font-size: 20px;
-    font-weight: 500;
-}
-
-.container .nav .navitem :last-child{
-    padding-right: 0;
-}
-
-.container .nav .navitem a:hover{
-    color: white;
-    text-shadow: 2px 2px 0px #1ccece;
-    transition:ease-in-out .2s ;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.459);
-}
 
 .container .slogan{
     width: 100%;
@@ -134,7 +62,7 @@ body{
     margin: 15px 0;
 }
 
-.container .activity .more{
+.container .activity .moreWork{
     grid-column-start: 1;
     grid-column-end: 3;
     background-color:#262626;
@@ -147,15 +75,196 @@ body{
     font-weight: 300;
 }
 
-.container .activity .more i{
+.container .activity .moreWork i{
     font-size: 35px;
     font-weight: 900;
 }
 
-.container .activity .more:hover{
+.container .activity .moreWork:hover{
     transition: .2s ease-in-out;
     background-color: #373737;
     color: rgba(255, 255, 255, 0.8);
     
 }
 
+.container .blog{
+    margin: 300px 0;
+    width: 100%;
+    height: 450px;
+    display: grid;
+    grid-template-columns: 3fr 3fr 2fr;
+    grid-template-rows: 1fr;
+    grid-gap: 20px;
+    box-sizing: content-box;
+}
+
+.container .blog .blogItem1{
+    grid-area: 1/1/span 1/span 1;
+    /* background-color: rgba(255, 255, 255, 0.3); */
+    display: relative;
+}
+
+.container .blog .blogItem2{
+    grid-area: 1/2/span 1/span 1;
+    /* background-color: rgba(255, 255, 255, 0.3); */
+}
+
+
+.blog .blogIntro{
+    height: 225px;
+    width: 100%;
+    background-color: #262626;
+    padding: 20px;
+    box-sizing: border-box;
+    display: absolute;
+    bottom: 0;
+    left: 0;
+    position: relative;
+}
+
+.blog .blogIntro:hover{
+
+    transition: .2s ease-in-out;
+    background-color: #373737;
+    color: rgba(255, 255, 255, 0.8);
+}
+
+
+.blog img{
+    width: 417px;
+}
+
+.blog .blogIntro .blogTitle{
+    font-size: 35px;
+    font-weight: 500;
+    color: rgba(255, 255, 255, 0.8);
+    margin-bottom: 20px;
+    line-height: 1.2;
+
+}
+
+.blog .blogIntro span{
+    font-size: 20px;
+    font-weight: 300;
+    color: rgba(255, 255, 255, 0.5);
+    position: absolute;
+    bottom: 20px;
+}
+
+.blog .moreBlog{
+    background-color: #262626;
+    color: rgba(255, 255, 255, 0.6);
+    font-size: 35px;
+    font-weight: 300;
+    padding-top: 425px;
+    text-align: center;
+}
+
+.blog .moreBlog:hover{
+    transition: .2s ease-in-out;
+    background-color: #373737;
+    color: rgba(255, 255, 255, 0.8);
+}
+
+.blog .moreBlog i{
+    font-size: 35px;
+    font-weight: 900;
+}
+
+.about{
+    width: 100%;
+    height: 700px;
+    display: grid;
+    grid-template-columns: 3.5fr 5.5fr 4fr;
+    grid-template-rows: 4.5fr 5.5fr;
+    grid-gap: 0;
+    margin-bottom: 200px;
+}
+
+.about .aboutItem{
+    color: rgb(255, 255, 255);
+    font-size: 65px;
+    font-weight: 700;
+    font-style: normal;
+    line-height: 1.3;
+    border: .5px solid rgba(255, 255, 255, 0.336);
+    padding: 30px;
+    box-sizing: border-box;
+}
+
+.about .aboutItem span{
+    font-size: 28px;
+    font-weight: 500;
+    font-style: italic;
+    line-height: 1.5;
+    display: block;
+    color: rgba(255, 255, 255, 0.699);
+}
+
+.about #name{
+    grid-area: 1 / 1 / span 2 / span 1;
+}
+
+.about #address{
+    grid-area: 1 / 2 / span 1 / span 1;
+}
+
+.about #school{
+    grid-area: 2 / 2 / span 1 / span 1;
+}
+
+.about #hobby{
+    grid-area: 1 / 3 / span 2 / span 1;
+}
+
+.contact{
+    margin: 0 auto;
+    width: 65%;
+    height: 300px;
+    display: grid;
+    grid-template-columns: 1fr 2.5fr;
+    grid-template-rows: 1fr 1fr;
+}
+
+#logo{
+    grid-area: 1 / 1 / span 2 / span 1;
+    padding: 70px 55px;
+}
+
+#logo img{
+    height: 150px;
+}
+
+#phone{
+    grid-area: 1 / 2 / span 1 / span 1;  
+}
+
+#phone:hover{
+    /* background-color: rgb(22, 167, 142); */
+    text-shadow: 3px 3px 0 #1ccece;
+    transition: .2s ease-in-out;
+}
+
+#mail{
+    grid-area: 2 / 2 / span 1 / span 1;  
+}
+
+#mail:hover{
+    /* background-color: rgb(22, 162, 167); */
+    text-shadow: 3px 3px 0 #1ccece;
+    transition: .2s ease-in-out;
+}
+
+.contact div{
+    padding: 39px;
+    line-height: 1.3;
+    font-size: 35px;
+    font-weight: 700;
+    color: white;
+}
+
+.contact div span{
+    display: block;
+    font-size: 20px;
+    font-weight: 300;
+}
