--- a/css/common.css
+++ b/css/common.css
@@ -77,3 +77,55 @@ body{
     transition:ease-in-out .2s ;
     border-bottom: 1px solid rgba(255, 255, 255, 0.459);
 }
+
+.contact{
+    margin: 0 auto;
+    width: 65%;
+    height: 300px;
+    display: grid;
+    grid-template-columns: 1fr 2.5fr;
+    grid-template-rows: 1fr 1fr;
+}
+
+#logo{
+    grid-area: 1 / 1 / span 2 / span 1;
+    padding: 70px 55px;
+}
+
+#logo img{
+    height: 150px;
+}
+
+#phone{
+    grid-area: 1 / 2 / span 1 / span 1;  
+}
+
+#phone:hover{
+    /* background-color: rgb(22, 167, 142); */
+    text-shadow: 3px 3px 0 #1ccece;
+    transition: .2s ease-in-out;
+}
+
+#mail{
+    grid-area: 2 / 2 / span 1 / span 1;  
+}
+
+#mail:hover{
+    /* background-color: rgb(22, 162, 167); */
+    text-shadow: 3px 3px 0 #1ccece;
+    transition: .2s ease-in-out;
+}
+
+.contact div{
+    padding: 39px;
+    line-height: 1.3;
+    font-size: 35px;
+    font-weight: 700;
+    color: white;
+}
+
+.contact div span{
+    display: block;
+    font-size: 20px;
+    font-weight: 300;
+}
