--- a/css/common.css
+++ b/css/common.css
@@ -37,6 +37,7 @@ body{
     width: 100px;
     height: 100px;
     opacity: 70%;
+    transition: ease-in-out .2s;
 }
 
 .container .nav .logo:hover{
@@ -55,6 +56,8 @@ body{
 
 .container .nav .navitem{
     float: right;
+
+    /* transition: ease-in-out .2s; */
 }
 
 .container .nav .navitem a{
@@ -65,6 +68,7 @@ body{
     box-sizing: border-box;
     font-size: 20px;
     font-weight: 500;
+    transition: ease-in-out .2s;
 }
 
 .container .nav .navitem :last-child{
@@ -85,6 +89,7 @@ body{
     display: grid;
     grid-template-columns: 1fr 2.5fr;
     grid-template-rows: 1fr 1fr;
+    
 }
 
 #logo{
@@ -98,6 +103,7 @@ body{
 
 #phone{
     grid-area: 1 / 2 / span 1 / span 1;  
+    transition: ease-in-out .2s;
 }
 
 #phone:hover{
@@ -108,6 +114,7 @@ body{
 
 #mail{
     grid-area: 2 / 2 / span 1 / span 1;  
+    transition: ease-in-out .2s;
 }
 
 #mail:hover{
