--- a/css/index.css
+++ b/css/index.css
@@ -47,6 +47,7 @@
     padding: 25px;
     opacity: 0;
     box-sizing: border-box;
+    transition: ease-in-out .2s;
 }
 
 .container .activity .intro:hover{
@@ -63,8 +64,7 @@
 }
 
 .container .activity .moreWork{
-    grid-column-start: 1;
-    grid-column-end: 3;
+    grid-area: 5/1/span 1/span 2;
     background-color:#262626;
     line-height: 80px;
     color: rgba(255, 255, 255, 0.6);
@@ -73,6 +73,7 @@
     padding-right: 25px;
     box-sizing: border-box;
     font-weight: 300;
+    transition: ease-in-out .2s;
 }
 
 .container .activity .moreWork i{
@@ -94,19 +95,22 @@
     display: grid;
     grid-template-columns: 3fr 3fr 2fr;
     grid-template-rows: 1fr;
-    grid-gap: 20px;
+    grid-gap: 10px;
     box-sizing: content-box;
 }
 
 .container .blog .blogItem1{
     grid-area: 1/1/span 1/span 1;
-    /* background-color: rgba(255, 255, 255, 0.3); */
+    background-image: url("../images/douban1.jpg");
+    background-position: 55% 50%;
     display: relative;
+    height: 450px;
 }
 
 .container .blog .blogItem2{
     grid-area: 1/2/span 1/span 1;
-    /* background-color: rgba(255, 255, 255, 0.3); */
+    background-image: url("../images/douban1.jpg");
+    height: 450px;
 }
 
 
@@ -120,6 +124,7 @@
     bottom: 0;
     left: 0;
     position: relative;
+    transition: ease-in-out .2s;
 }
 
 .blog .blogIntro:hover{
@@ -130,9 +135,9 @@
 }
 
 
-.blog img{
+/* .blog img{
     width: 417px;
-}
+} */
 
 .blog .blogIntro .blogTitle{
     font-size: 35px;
@@ -156,8 +161,11 @@
     color: rgba(255, 255, 255, 0.6);
     font-size: 35px;
     font-weight: 300;
-    padding-top: 425px;
+    padding-top: 380px;
+    height: 450px;
+    box-sizing: border-box;
     text-align: center;
+    transition: ease-in-out .2s;
 }
 
 .blog .moreBlog:hover{
@@ -187,7 +195,7 @@
     font-weight: 700;
     font-style: normal;
     line-height: 1.3;
-    border: .5px solid rgba(255, 255, 255, 0.336);
+    /* border: .5px solid rgba(255, 255, 255, 0.336); */
     padding: 30px;
     box-sizing: border-box;
 }
@@ -203,6 +211,15 @@
 
 .about #name{
     grid-area: 1 / 1 / span 2 / span 1;
+    /* background-image: url("../images/WechatIMG1-01.jpg"); */
+    
+}
+
+.about #name:hover{
+    background-image: url("../images/WechatIMG1-01.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 20% -10%;
 }
 
 .about #address{
@@ -211,6 +228,13 @@
 
 .about #school{
     grid-area: 2 / 2 / span 1 / span 1;
+}
+
+.about #school:hover{
+    background-image: url("http://img0.imgtn.bdimg.com/it/u=2785291050,2761446550&fm=26&gp=0.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position-x: 30%;
 }
 
 .about #hobby{
