--- a/css/blogDetail.css
+++ b/css/blogDetail.css
@@ -8,6 +8,8 @@
     height: 500px;
     /* background-color: teal; */
     background-image: url("../images/douban1.jpg") ;
+    background-position: center;
+    background-size: cover;
     position: absolute;
     top: 0;
     left: 0;
