--- a/css/blogDetail.css
+++ b/css/blogDetail.css
@@ -7,7 +7,8 @@
     width: 100%;
     height: 500px;
     /* background-color: teal; */
-    background-image: url("../images/douban1.jpg") ;
+    background: url("../images/douban1.jpg");
+    background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     position: absolute;
