--- a/css/index.css
+++ b/css/index.css
@@ -5,14 +5,15 @@
     width: 100%;
     height: 400px;
     text-align: center;
-    line-height: 100px;
+    line-height: 400px;
     /* background-color: rgba(255, 255, 255, .3); */
-    padding:80px 0;
+    /* padding:80px 0; */
     box-sizing: border-box;
     font-size: 70px;
     font-weight: 900;
     font-style: italic;
     color: white;
+    margin: 125px 0;
 }
 
 .container .activity{
@@ -161,7 +162,7 @@
     color: rgba(255, 255, 255, 0.6);
     font-size: 35px;
     font-weight: 300;
-    padding-top: 380px;
+    padding-top: 20px;
     height: 450px;
     box-sizing: border-box;
     text-align: center;
