--- a/css/blogDetail.css
+++ b/css/blogDetail.css
@@ -8,8 +8,10 @@
     height: 500px;
     /* background-color: teal; */
     background: url("../images/douban1.jpg");
+    background-attachment: fixed;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position-y: -320px;
+    background-position-x: center;
     background-size: cover;
     position: absolute;
     top: 0;
