--- a/css/index.css
+++ b/css/index.css
@@ -1,244 +1,234 @@
-
-
-
-.container .slogan{
-    width: 100%;
-    height: 400px;
-    text-align: center;
-    line-height: 400px;
-    /* background-color: rgba(255, 255, 255, .3); */
-    /* padding:80px 0; */
-    box-sizing: border-box;
-    font-size: 70px;
-    font-weight: 900;
-    font-style: italic;
-    color: white;
-    margin: 125px 0;
+.container .slogan {
+  width: 100%;
+  height: 400px;
+  text-align: center;
+  line-height: 400px;
+  /* background-color: rgba(255, 255, 255, .3); */
+  /* padding:80px 0; */
+  box-sizing: border-box;
+  font-size: 70px;
+  font-weight: 900;
+  font-style: italic;
+  color: white;
+  margin: 125px 0;
 }
 
-.container .activity{
-    width: 100%;
-    height: 400px;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(5, 80px);
-    background-color: rgba(255, 255, 255, .3);
+.container .activity {
+  width: 100%;
+  height: 400px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(5, 80px);
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 /* .container .activity div{
     border: 2px solid white;
 } */
 
-.container .activity .work1{
-    grid-area: 1/1/span 4/span 1;
-    background-color: royalblue;
+.container .activity .work1 {
+  grid-area: 1/1 / span 4 / span 1;
+  background-color: royalblue;
 }
 
-.container .activity .work2{
-    grid-area: 1/2/span 4/span 1;
-    background-color: rgb(62, 218, 176);
+.container .activity .work2 {
+  grid-area: 1/2 / span 4 / span 1;
+  background-color: rgb(62, 218, 176);
 }
 
-.container .activity .intro{
-    width: 100%;
-    height: 100%;
-    color: white;
-    font-size: 40px;
-    font-weight: 500;
-    padding: 25px;
-    opacity: 0;
-    box-sizing: border-box;
-    transition: ease-in-out .2s;
+.container .activity .intro {
+  width: 100%;
+  height: 100%;
+  color: white;
+  font-size: 40px;
+  font-weight: 500;
+  padding: 25px;
+  opacity: 0;
+  box-sizing: border-box;
+  transition: ease-in-out 0.2s;
 }
 
-.container .activity .intro:hover{
-    opacity: 100%;
-    transition: ease-in-out .2s;
+.container .activity .intro:hover {
+  opacity: 100%;
+  transition: ease-in-out 0.2s;
 }
 
-.container .activity .intro span{
-    color: white;
-    font-size: 16px;
-    font-weight: 300;
-    display: block;
-    margin: 15px 0;
+.container .activity .intro span {
+  color: white;
+  font-size: 16px;
+  font-weight: 300;
+  display: block;
+  margin: 15px 0;
 }
 
-.container .activity .moreWork{
-    grid-area: 5/1/span 1/span 2;
-    background-color:#262626;
-    line-height: 80px;
-    color: rgba(255, 255, 255, 0.6);
-    text-align: right;
-    font-size: 35px;
-    padding-right: 25px;
-    box-sizing: border-box;
-    font-weight: 300;
-    transition: ease-in-out .2s;
+.container .activity .moreWork {
+  grid-area: 5/1 / span 1 / span 2;
+  background-color: #262626;
+  line-height: 80px;
+  color: rgba(255, 255, 255, 0.6);
+  text-align: right;
+  font-size: 35px;
+  padding-right: 25px;
+  box-sizing: border-box;
+  font-weight: 300;
+  transition: ease-in-out 0.2s;
 }
 
-.container .activity .moreWork i{
-    font-size: 35px;
-    font-weight: 900;
+.container .activity .moreWork i {
+  font-size: 35px;
+  font-weight: 900;
 }
 
-.container .activity .moreWork:hover{
-    transition: .2s ease-in-out;
-    background-color: #373737;
-    color: rgba(255, 255, 255, 0.8);
-    
+.container .activity .moreWork:hover {
+  transition: 0.2s ease-in-out;
+  background-color: #373737;
+  color: rgba(255, 255, 255, 0.8);
 }
 
-.container .blog{
-    margin: 300px 0;
-    width: 100%;
-    height: 450px;
-    display: grid;
-    grid-template-columns: 3fr 3fr 2fr;
-    grid-template-rows: 1fr;
-    grid-gap: 10px;
-    box-sizing: content-box;
+.container .blog {
+  margin: 300px 0;
+  width: 100%;
+  height: 450px;
+  display: grid;
+  grid-template-columns: 3fr 3fr 2fr;
+  grid-template-rows: 1fr;
+  grid-gap: 10px;
+  box-sizing: content-box;
 }
 
-.container .blog .blogItem1{
-    grid-area: 1/1/span 1/span 1;
-    background-image: url("../images/douban1.jpg");
-    background-position: 55% 50%;
-    display: relative;
-    height: 450px;
+.container .blog .blogItem1 {
+  grid-area: 1/1 / span 1 / span 1;
+  background-image: url("../images/douban1.jpg");
+  background-position: 55% 50%;
+  display: relative;
+  height: 450px;
 }
 
-.container .blog .blogItem2{
-    grid-area: 1/2/span 1/span 1;
-    background-image: url("../images/douban1.jpg");
-    height: 450px;
+.container .blog .blogItem2 {
+  grid-area: 1/2 / span 1 / span 1;
+  background-image: url("../images/douban1.jpg");
+  height: 450px;
 }
 
-
-.blog .blogIntro{
-    height: 225px;
-    width: 100%;
-    background-color: #262626;
-    padding: 20px;
-    box-sizing: border-box;
-    display: absolute;
-    bottom: 0;
-    left: 0;
-    position: relative;
-    transition: ease-in-out .2s;
+.blog .blogIntro {
+  height: 225px;
+  width: 100%;
+  background-color: #262626;
+  padding: 20px;
+  box-sizing: border-box;
+  display: absolute;
+  bottom: 0;
+  left: 0;
+  position: relative;
+  transition: ease-in-out 0.2s;
 }
 
-.blog .blogIntro:hover{
-
-    transition: .2s ease-in-out;
-    background-color: #373737;
-    color: rgba(255, 255, 255, 0.8);
+.blog .blogIntro:hover {
+  transition: 0.2s ease-in-out;
+  background-color: #373737;
+  color: rgba(255, 255, 255, 0.8);
 }
-
 
 /* .blog img{
     width: 417px;
 } */
 
-.blog .blogIntro .blogTitle{
-    font-size: 35px;
-    font-weight: 500;
-    color: rgba(255, 255, 255, 0.8);
-    margin-bottom: 20px;
-    line-height: 1.2;
-
+.blog .blogIntro .blogTitle {
+  font-size: 35px;
+  font-weight: 500;
+  color: rgba(255, 255, 255, 0.8);
+  margin-bottom: 20px;
+  line-height: 1.2;
 }
 
-.blog .blogIntro span{
-    font-size: 20px;
-    font-weight: 300;
-    color: rgba(255, 255, 255, 0.5);
-    position: absolute;
-    bottom: 20px;
+.blog .blogIntro span {
+  font-size: 20px;
+  font-weight: 300;
+  color: rgba(255, 255, 255, 0.5);
+  position: absolute;
+  bottom: 20px;
 }
 
-.blog .moreBlog{
-    background-color: #262626;
-    color: rgba(255, 255, 255, 0.6);
-    font-size: 35px;
-    font-weight: 300;
-    padding-top: 20px;
-    height: 450px;
-    box-sizing: border-box;
-    text-align: center;
-    transition: ease-in-out .2s;
+.blog .moreBlog {
+  background-color: #262626;
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 35px;
+  font-weight: 300;
+  padding-top: 20px;
+  height: 450px;
+  box-sizing: border-box;
+  text-align: center;
+  transition: ease-in-out 0.2s;
 }
 
-.blog .moreBlog:hover{
-    transition: .2s ease-in-out;
-    background-color: #373737;
-    color: rgba(255, 255, 255, 0.8);
+.blog .moreBlog:hover {
+  transition: 0.2s ease-in-out;
+  background-color: #373737;
+  color: rgba(255, 255, 255, 0.8);
 }
 
-.blog .moreBlog i{
-    font-size: 35px;
-    font-weight: 900;
+.blog .moreBlog i {
+  font-size: 35px;
+  font-weight: 900;
 }
 
-.about{
-    width: 100%;
-    height: 700px;
-    display: grid;
-    grid-template-columns: 3.5fr 5.5fr 4fr;
-    grid-template-rows: 4.5fr 5.5fr;
-    grid-gap: 0;
-    margin-bottom: 200px;
+.about {
+  width: 100%;
+  height: 700px;
+  display: grid;
+  grid-template-columns: 3.5fr 5.5fr 4fr;
+  grid-template-rows: 4.5fr 5.5fr;
+  grid-gap: 0;
+  margin-bottom: 200px;
 }
 
-.about .aboutItem{
-    color: rgb(255, 255, 255);
-    font-size: 65px;
-    font-weight: 700;
-    font-style: normal;
-    line-height: 1.3;
-    /* border: .5px solid rgba(255, 255, 255, 0.336); */
-    padding: 30px;
-    box-sizing: border-box;
+.about .aboutItem {
+  color: rgb(255, 255, 255);
+  font-size: 65px;
+  font-weight: 700;
+  font-style: normal;
+  line-height: 1.3;
+  /* border: .5px solid rgba(255, 255, 255, 0.336); */
+  padding: 30px;
+  box-sizing: border-box;
 }
 
-.about .aboutItem span{
-    font-size: 28px;
-    font-weight: 500;
-    font-style: italic;
-    line-height: 1.5;
-    display: block;
-    color: rgba(255, 255, 255, 0.699);
+.about .aboutItem span {
+  font-size: 28px;
+  font-weight: 500;
+  font-style: italic;
+  line-height: 1.5;
+  display: block;
+  color: rgba(255, 255, 255, 0.699);
 }
 
-.about #name{
-    grid-area: 1 / 1 / span 2 / span 1;
-    /* background-image: url("../images/WechatIMG1-01.jpg"); */
-    
+.about #name {
+  grid-area: 1 / 1 / span 2 / span 1;
+  /* background-image: url("../images/WechatIMG1-01.jpg"); */
 }
 
-.about #name:hover{
-    background-image: url("../images/WechatIMG1-01.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 20% -10%;
+.about #name:hover {
+  background-image: url("../images/WechatIMG1-01.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 20% -10%;
 }
 
-.about #address{
-    grid-area: 1 / 2 / span 1 / span 1;
+.about #address {
+  grid-area: 1 / 2 / span 1 / span 1;
 }
 
-.about #school{
-    grid-area: 2 / 2 / span 1 / span 1;
+.about #school {
+  grid-area: 2 / 2 / span 1 / span 1;
 }
 
-.about #school:hover{
-    background-image: url("http://img0.imgtn.bdimg.com/it/u=2785291050,2761446550&fm=26&gp=0.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position-x: 30%;
+.about #school:hover {
+  background-image: url("http://img0.imgtn.bdimg.com/it/u=2785291050,2761446550&fm=26&gp=0.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position-x: 30%;
 }
 
-.about #hobby{
-    grid-area: 1 / 3 / span 2 / span 1;
+.about #hobby {
+  grid-area: 1 / 3 / span 2 / span 1;
 }
-
