--- a/css/work.css
+++ b/css/work.css
@@ -1,50 +1,113 @@
-
-h1{
-    margin-top: 100px;
-    font-size: 70px;
-    color: white;
-    font-weight: 700;
+h1 {
+  margin-top: 100px;
+  font-size: 70px;
+  color: white;
+  font-weight: 700;
 }
 
-.works{
-    display: grid;
-    width: 100%;
-    height: 1200px;
-    margin-top: 30px;
-    margin-bottom: 150px;
+.works {
+  display: grid;
+  width: 100%;
+  height: 1200px;
+  margin-top: 30px;
+  margin-bottom: 150px;
 
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(1fr, 4);
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(1fr, 3) 0.3fr;
 }
 
-.works:last-child{
-    color: #555555;
+.works:last-child {
+  color: #555555;
 }
 
-.works .workItem{
-    background-color: #262626;
+.works .workItem {
+  background-color: #262626;
 }
 
-.container .works .intro{
-    width: 100%;
-    height: 100%;
-    color: white;
-    font-size: 40px;
-    font-weight: 500;
-    padding: 25px;
-    opacity: 0;
-    box-sizing: border-box;
+#wi1 {
+  background: url("../images/sharebox.jpg") center;
+  background-size: 100%;
+  transition: ease-in-out 0.2s;
 }
 
-.container .works .intro:hover{
-    opacity: 100%;
-    transition: ease-in-out .2s;
+#wi2 {
+  background: url("../images/prepal.jpg") center;
+  background-size: 100%;
+  transition: ease-in-out 0.2s;
 }
 
-.container .works .intro span{
-    color: white;
-    font-size: 16px;
-    font-weight: 300;
-    display: block;
-    margin: 15px 0;
+#wi3 {
+  background: url("../images/hospass.jpg") center;
+  background-size: 100%;
+  transition: ease-in-out 0.2s;
 }
+
+#wi4 {
+  background: url("../images/ficars.jpg") center;
+  background-size: 100%;
+  transition: ease-in-out 0.2s;
+}
+
+#wi5 {
+  background: url("../images/sjtu.jpg") center;
+  background-size: 100%;
+  transition: ease-in-out 0.2s;
+}
+
+#wi6 {
+  background: url("../images/ecust.jpg") center;
+  background-size: 100%;
+  transition: ease-in-out 0.2s;
+}
+
+#wi7 {
+  background: url("../images/more.jpg") center;
+  background-size: 100%;
+  transition: ease-in-out 0.2s;
+}
+
+#wi6:hover,
+#wi1:hover,
+#wi2:hover,
+#wi3:hover,
+#wi4:hover,
+#wi5:hover,
+#wi7:hover {
+  background-size: 105%;
+  transition: ease-in-out 0.2s;
+}
+
+.container .works .intro {
+  width: 100%;
+  height: 100%;
+  color: white;
+  font-size: 40px;
+  font-weight: 500;
+  padding: 25px;
+  opacity: 0;
+  box-sizing: border-box;
+}
+
+.container .works .intro:hover {
+  opacity: 100%;
+  transition: ease-in-out 0.2s;
+}
+
+.container .works .intro span {
+  color: white;
+  font-size: 16px;
+  font-weight: 300;
+  display: block;
+  margin: 15px 0;
+}
+
+/* #wi7 .intro {
+  color: #555;
+  width: 100%;
+  height: 100%;
+  font-size: 40px;
+  font-weight: 500;
+  padding: 25px;
+  opacity: 0;
+  box-sizing: border-box;
+} */
