--- a/css/common.css
+++ b/css/common.css
@@ -75,7 +75,7 @@ body {
 
 .container .nav .navitem a:hover {
   color: white;
-  text-shadow: 2px 2px 0px #1ccece;
+  text-shadow: 2px 2px 0px #db296d;
   transition: ease-in-out 0.2s;
   border-bottom: 1px solid rgba(255, 255, 255, 0.459);
 }
@@ -105,7 +105,7 @@ body {
 
 #phone:hover {
   /* background-color: rgb(22, 167, 142); */
-  text-shadow: 3px 3px 0 #1ccece;
+  text-shadow: 3px 3px 0 #db296d;
   transition: 0.2s ease-in-out;
 }
 
@@ -116,7 +116,7 @@ body {
 
 #mail:hover {
   /* background-color: rgb(22, 162, 167); */
-  text-shadow: 3px 3px 0 #1ccece;
+  text-shadow: 3px 3px 0 #db296d;
   transition: 0.2s ease-in-out;
 }
 
