--- a/css/blog.css
+++ b/css/blog.css
@@ -1,60 +1,77 @@
-
-.container .blogs{
-    margin-top: 100px;
-    margin-bottom: 200px;
-    width: 100%;
-    height: 600px;
-
+.container .blogs {
+  margin-top: 30px;
+  margin-bottom: 200px;
+  width: 100%;
+  height: 900px;
 }
 
-.blogs a{
-    width: 100%;
-    display: block;
-    height: 250px;
-    background-color: #262626;
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    grid-template-rows: 1fr;
-    margin-bottom: 10px;
+h1 {
+  margin-top: 100px;
+  font-size: 70px;
+  color: white;
+  font-weight: 700;
 }
 
-.blogs a .blogImage{
-    background-image: url("../images/douban1.jpg");
-    background-position: center;
-    background-size: cover;
+.blogs a {
+  width: 100%;
+  display: block;
+  height: 250px;
+  background-color: #262626;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: 1fr;
+  margin-bottom: 10px;
 }
 
-.blogs a .bIntro{
-    font-size: 40px;
-    font-weight: 700;
-    line-height: 1.2;
-    color: white;
-    padding: 30px;
-    position: relative;
+.blogs a #blogImage1 {
+  background: url("../images/leanux.jpg") no-repeat;
+  background-position: center 98%;
+  background-size: 350%;
+}
+
+.blogs a #blogImage2 {
+  background: url("../images/choice.jpg") no-repeat;
+  background-position: center 100%;
+  background-size: 230%;
+}
+
+.blogs a #blogImage3 {
+  background-image: url("../images/douban1.jpg");
+  background-position: center 97%;
+  background-size: 250%;
+}
+
+.blogs a .bIntro {
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 1.2;
+  color: white;
+  padding: 30px;
+  position: relative;
 }
 
 .blogs a:hover,
-.blogs .more:hover{
-    background-color: #373737;
-    transition: .2s ease-in-out;
+.blogs .more:hover {
+  background-color: #373737;
+  transition: 0.2s ease-in-out;
 }
 
-.blogs a .bIntro span{
-    font-size: 20px;
-    display: block;
-    font-weight: 300;
-    line-height: 1.2;
-    color: rgba(255, 255, 255, 0.705);
-    position: absolute;
-    bottom: 30px;
+.blogs a .bIntro span {
+  font-size: 20px;
+  display: block;
+  font-weight: 300;
+  line-height: 1.2;
+  color: rgba(255, 255, 255, 0.705);
+  position: absolute;
+  bottom: 30px;
 }
 
-.blogs .more{
-    height: 150px;
-    width: 100%;
-    background-color: #262626;
-    text-align: center;
-    line-height: 150px;
-    font-size: 30px;
-    color: #555555;
+.blogs .more {
+  height: 150px;
+  width: 100%;
+  background-color: #262626;
+  text-align: center;
+  line-height: 150px;
+  font-size: 30px;
+  color: #555555;
 }
