--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 400px;
   text-align: center;
-  line-height: 400px;
+  line-height: 2;
   /* background-color: rgba(255, 255, 255, .3); */
   /* padding:80px 0; */
   box-sizing: border-box;
@@ -11,6 +11,14 @@
   font-style: italic;
   color: white;
   margin: 125px 0;
+}
+
+.container .slogan span {
+  display: block;
+  color: rgba(255, 255, 255, 0.7);
+  font-size: 24px;
+  font-weight: 300;
+  font-style: normal;
 }
 
 .container .activity {
@@ -112,15 +120,17 @@
 
 .container .blog .blogItem1 {
   grid-area: 1/1 / span 1 / span 1;
-  background-image: url("../images/douban1.jpg");
-  background-position: 55% 50%;
+  background-image: url("../images/leanux.jpg");
+  background-position: center;
   display: relative;
   height: 450px;
 }
 
 .container .blog .blogItem2 {
   grid-area: 1/2 / span 1 / span 1;
-  background-image: url("../images/douban1.jpg");
+  background: url("../images/choice.jpg") no-repeat;
+  background-size: 261%;
+  background-position: 9% 205%;
   height: 450px;
 }
 
