--- a/css/work.css
+++ b/css/work.css
@@ -25,43 +25,43 @@ h1 {
 }
 
 #wi1 {
-  background: url("../images/sharebox.jpg") center;
+  background: url("https://i.postimg.cc/wjYrZr9v/sharebox.jpg") center;
   background-size: 100%;
   transition: ease-in-out 0.2s;
 }
 
 #wi2 {
-  background: url("../images/prepal.jpg") center;
+  background: url("https://i.postimg.cc/rFrbhTX3/prepal.jpg") center;
   background-size: 100%;
   transition: ease-in-out 0.2s;
 }
 
 #wi3 {
-  background: url("../images/hospass.jpg") center;
+  background: url("https://i.postimg.cc/T1ZsR7mt/hospass.jpg") center;
   background-size: 100%;
   transition: ease-in-out 0.2s;
 }
 
 #wi4 {
-  background: url("../images/ficars.jpg") center;
+  background: url("https://i.postimg.cc/Y04VBK44/ficars.jpg") center;
   background-size: 100%;
   transition: ease-in-out 0.2s;
 }
 
 #wi5 {
-  background: url("../images/sjtu.jpg") center;
+  background: url("https://i.postimg.cc/wj5rpkBk/sjtu.jpg") center;
   background-size: 100%;
   transition: ease-in-out 0.2s;
 }
 
 #wi6 {
-  background: url("../images/ecust.jpg") center;
+  background: url("https://i.postimg.cc/Mp1CGS9V/ecust.jpg") center;
   background-size: 100%;
   transition: ease-in-out 0.2s;
 }
 
 #wi7 {
-  background: url("../images/more.jpg") center;
+  background: url("https://i.postimg.cc/j5SmvJt4/more.jpg") center;
   background-size: 100%;
   transition: ease-in-out 0.2s;
 }
