--- a/css/work.css
+++ b/css/work.css
@@ -49,7 +49,8 @@ h1 {
 }
 
 #wi5 {
-  background: url("https://i.postimg.cc/wj5rpkBk/sjtu.jpg") center;
+  background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q3kRdes/jASqEt644m*KNERKGtvN1fpj45shG5qqjWIAx9ElfEWXLHi9FgjH88ZQRuJjfvKlQ2prFHU*FJ3n5MfzaE16eHzTKc0mf6OP9TWGxmwsKko!/r")
+    center;
   background-size: 100%;
   transition: ease-in-out 0.2s;
 }
