--- a/css/blogDetail.css
+++ b/css/blogDetail.css
@@ -36,7 +36,7 @@
   width: 100%;
   height: 500px;
   /* background-color: teal; */
-  background: url("https://i.postimg.cc/htF575wn/leanux.jpg");
+  background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q1FxsOO/jASqEt644m*KNERKGtvN1ajCNe7y.qtDOZM3AQNz49oS*lXvBM1Zw5.3rywafDx3ZE0MDVBF3sNsv*v0vaTv0bGZDZIZb3VQ321ZdGfqscQ!/r");
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position-y: -320px;
