--- a/css/blogDetail.css
+++ b/css/blogDetail.css
@@ -21,7 +21,7 @@
   width: 100%;
   height: 500px;
   /* background-color: teal; */
-  background: url("https://i.postimg.cc/dV8SR9Py/choice.jpg");
+  background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q1FxsOO/jASqEt644m*KNERKGtvN1cGiSlSZuyAQHlZZAaXAbqOT3ytYnOaIEGlZRuNFrtY9fy4ujl4Jl4OZd*d2RR1fVfqxHig9tRt4NR*PoFzwgpQ!/r");
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position-y: 0px;
@@ -39,7 +39,7 @@
   background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q1FxsOO/jASqEt644m*KNERKGtvN1ajCNe7y.qtDOZM3AQNz49oS*lXvBM1Zw5.3rywafDx3ZE0MDVBF3sNsv*v0vaTv0bGZDZIZb3VQ321ZdGfqscQ!/r");
   background-attachment: fixed;
   background-repeat: no-repeat;
-  background-position-y: -320px;
+  background-position-y: -280px;
   background-position-x: center;
   background-size: cover;
   position: absolute;
