--- a/css/blog.css
+++ b/css/blog.css
@@ -24,7 +24,8 @@ h1 {
 }
 
 .blogs a #blogImage1 {
-  background: url("../images/leanux.jpg") no-repeat;
+  background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q1FxsOO/jASqEt644m*KNERKGtvN1ajCNe7y.qtDOZM3AQNz49oS*lXvBM1Zw5.3rywafDx3ZE0MDVBF3sNsv*v0vaTv0bGZDZIZb3VQ321ZdGfqscQ!/r")
+    no-repeat;
   background-position: center 98%;
   background-size: 350%;
 }
