--- a/css/blogDetail.css
+++ b/css/blogDetail.css
@@ -6,7 +6,7 @@
   width: 100%;
   height: 500px;
   /* background-color: teal; */
-  background: url("https://i.postimg.cc/hPQYvB2M/douban1.jpg");
+  background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q1FxsOO/jASqEt644m*KNERKGtvN1RGNxMGXsfriEnSiuLX9.wqPSNzciA3fJItx6FjTihc.*S9GJoZzQeclp3bsnb3B8C0DTrPfYEsg4344yblZI0k!/r");
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position-y: -320px;
@@ -21,7 +21,7 @@
   width: 100%;
   height: 500px;
   /* background-color: teal; */
-  background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q1FxsOO/jASqEt644m*KNERKGtvN1cGiSlSZuyAQHlZZAaXAbqOT3ytYnOaIEGlZRuNFrtY9fy4ujl4Jl4OZd*d2RR1fVfqxHig9tRt4NR*PoFzwgpQ!/r");
+  background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q1FxsOO/jASqEt644m*KNERKGtvN1R3L7r2c5mwiXaW.h*4sOnUmMfHgjSKgWYhw1PWMhaAI5a8bSMa20EBzWmwYTmW2.fvssrSI9PulMTuCxwLXO8s!/r");
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position-y: 0px;
