--- a/css/work.css
+++ b/css/work.css
@@ -25,25 +25,29 @@ h1 {
 }
 
 #wi1 {
-  background: url("https://i.postimg.cc/wjYrZr9v/sharebox.jpg") center;
+  background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q3kRdes/jASqEt644m*KNERKGtvN1QPV2ahgaqPhotpDreK7NSh7G3vb85vzBPvnXD5rVkud0a*ork*huQxOynmkUQQfEbEChkoL9jwfSjLDmv7XgK4!/r")
+    center;
   background-size: 100%;
   transition: ease-in-out 0.2s;
 }
 
 #wi2 {
-  background: url("https://i.postimg.cc/rFrbhTX3/prepal.jpg") center;
+  background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q3kRdes/jASqEt644m*KNERKGtvN1ULntNdQeG2GGiRxHmLeo.z1NDDdMvYGwQqU2xpwKxhXqSJxKtm14I0t.sEOu*otkOBIU7b8mTM7EbpTkm.fzmg!/r")
+    center;
   background-size: 100%;
   transition: ease-in-out 0.2s;
 }
 
 #wi3 {
-  background: url("https://i.postimg.cc/T1ZsR7mt/hospass.jpg") center;
+  background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q3kRdes/jASqEt644m*KNERKGtvN1d5Aziq2agPr0McvyAWAGuWPvI5J0.aioiMwvl77P1D1GY5gudzdAISYNObvCc51ouznIzamZcGL3iTVMhk7Dic!/r")
+    center;
   background-size: 100%;
   transition: ease-in-out 0.2s;
 }
 
 #wi4 {
-  background: url("https://i.postimg.cc/Y04VBK44/ficars.jpg") center;
+  background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q3kRdes/jASqEt644m*KNERKGtvN1c.RxXp4ZTAmdX9g6hf6btQtPxfQV9WF09L6KcS9hCxU6XQ36jrWIv29d*xjzsFltE8PkSsRUawy*OJOHP1XWG8!/r")
+    center;
   background-size: 100%;
   transition: ease-in-out 0.2s;
 }
@@ -56,13 +60,15 @@ h1 {
 }
 
 #wi6 {
-  background: url("https://i.postimg.cc/Mp1CGS9V/ecust.jpg") center;
+  background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q3kRdes/jASqEt644m*KNERKGtvN1QLBgPPXjnMiBpvvZ3Z*hV.I*nv7k*0Z9w0HFQEtTW0C39LCjI.KShQnEAqqFNAuugJZh.E5L4qpGhaNQU5G6E0!/r")
+    center;
   background-size: 100%;
   transition: ease-in-out 0.2s;
 }
 
 #wi7 {
-  background: url("https://i.postimg.cc/j5SmvJt4/more.jpg") center;
+  background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q3kRdes/jASqEt644m*KNERKGtvN1YOUvfpZGl43ywUZk89LNAMy2aUnGagHSKepVag3CdrX4*umgpFEaAquQTHolbd5t0KO9FrTul1xR2QOxpt9StA!/r")
+    center;
   background-size: 100%;
   transition: ease-in-out 0.2s;
 }
