--- a/css/index.css
+++ b/css/index.css
@@ -122,6 +122,7 @@
   grid-area: 1/1 / span 1 / span 1;
   background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q1FxsOO/jASqEt644m*KNERKGtvN1ajCNe7y.qtDOZM3AQNz49oS*lXvBM1Zw5.3rywafDx30I6M1reuihcV*6XRy0Imluvr.p7jIuQm2ChrYYcqIXY!/r");
   background-position: center;
+  background-size: 320%;
   display: relative;
   height: 450px;
 }
