--- a/css/work.css
+++ b/css/work.css
@@ -67,7 +67,7 @@ h1 {
 }
 
 #wi7 {
-  background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q3kRdes/jASqEt644m*KNERKGtvN1YOUvfpZGl43ywUZk89LNAMy2aUnGagHSKepVag3CdrX4*umgpFEaAquQTHolbd5t0KO9FrTul1xR2QOxpt9StA!/r")
+  background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q3kRdes/jASqEt644m*KNERKGtvN1aRjzolWyKbbNSbT5w4H*JXf73zhAH4cF8Ufjr4rPHVIDCz5NfAX.yON0evgZyuCbwqyfltyj7sfiMk.P5J1jHc!/r")
     center;
   background-size: 100%;
   transition: ease-in-out 0.2s;
