--- a/css/common.css
+++ b/css/common.css
@@ -13,7 +13,7 @@ body {
 
 .container {
   margin-top: 20px;
-  width: 80%;
+  width: 1152px;
   margin: 0 auto;
   /* background-color: rgba(255, 255, 255, .3); */
   /* height: 750px; */
