--- a/css/blogDetail.css
+++ b/css/blogDetail.css
@@ -47,6 +47,21 @@
   left: 0;
 }
 
+.bbg4 {
+  width: 100%;
+  height: 500px;
+  /* background-color: teal; */
+  background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q1FxsOO/jASqEt644m*KNERKGtvN1ZougtTlL*2MMSL4DDBaKW28cIXKUmYd08cBzs5ccLCGq9jQTTtt9A6kVUHIg33Ie.hf*btGzGzWZd5*kmapMQU!/r");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position-y: -70px;
+  background-position-x: center;
+  background-size: 120%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 .content .title {
   color: white;
   width: 100%;
