--- a/css/common.css
+++ b/css/common.css
@@ -81,9 +81,9 @@ body {
 }
 
 .contact {
-  margin: 0 auto;
+  margin: 50px auto;
   width: 65%;
-  height: 300px;
+  height: 200px;
   display: grid;
   grid-template-columns: 1fr 2.5fr;
   grid-template-rows: 1fr 1fr;
@@ -91,7 +91,7 @@ body {
 
 #logo {
   grid-area: 1 / 1 / span 2 / span 1;
-  padding: 70px 55px;
+  padding: 16px 55px;
 }
 
 #logo img {
@@ -121,7 +121,7 @@ body {
 }
 
 .contact div {
-  padding: 39px;
+  /* padding: 39px; */
   line-height: 1.3;
   font-size: 35px;
   font-weight: 700;
